<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <include
        android:id="@+id/head_layout"
        layout="@layout/systembar_header" />

    <RelativeLayout
        android:id="@+id/alter_information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp" >

        <!-- 姓名 -->

        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/username"
                android:text="@string/account_username"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/empty"
                android:textColor="#686868"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/username_layout"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="#ccc" />

        <!-- 性别 -->

        <RelativeLayout
            android:id="@+id/sex_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/sex"
                android:text="@string/sex"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/empty"
                android:textColor="#686868"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/sex_layout"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="#ccc" />

        <!-- 家乡 -->

        <RelativeLayout
            android:id="@+id/hometown_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sex_layout"
            android:layout_marginTop="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/hometown"
                android:text="@string/hometown"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/hometown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/empty"
                android:textColor="#686868"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/hometown_layout"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="#ccc" />

        <!-- 出生日期 -->

        <RelativeLayout
            android:id="@+id/birth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hometown_layout"
            android:layout_marginTop="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/birth"
                android:text="@string/birth"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/empty"
                android:textColor="#686868"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/birth_layout"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="#ccc" />

        <!-- 个人宣言 -->

        <RelativeLayout
            android:id="@+id/personal_statement_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/birth_layout"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/personal_statement_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableBottom="@drawable/personal_statement_img"
                android:text="@string/personal_statement"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/personal_statement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/personal_statement_text"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:hint="@string/empty"
                android:textColor="#686868"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/personal_statement_layout"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="#ccc" />
    </RelativeLayout>

    <Button
        android:id="@+id/alter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alter_information_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_alter_click"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/save"
        android:textColor="#737373"
        android:textSize="17sp" />

</RelativeLayout>