<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <ImageView
        android:id="@+id/moresex_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/moresex_logo" />

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@null"
            android:drawableLeft="@drawable/user"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <View
            android:id="@+id/user_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/username"
            android:layout_marginLeft="78dp"
            android:layout_marginRight="50dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="13dp"
            android:background="@null"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <View
            android:id="@+id/password_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/password"
            android:layout_marginLeft="78dp"
            android:layout_marginRight="50dp"
            android:background="#fff" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_click"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_click"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_layout"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/wx" />

        <ImageView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@id/wechat"
            android:contentDescription="@null"
            android:src="@drawable/qq" />

        <ImageView
            android:id="@+id/sina_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/wechat"
            android:contentDescription="@null"
            android:src="@drawable/wb" />
    </RelativeLayout>

</RelativeLayout>